@@ -114,6 +114,7 @@ version 25-git (????-??-??):
     or last credit note document (last) [ravvar]
   - enhancement: host transfers between networks preserve host map [chilan]
   - enhancement: log timetable event changes in transaction log [chilan]
+  - enhancement: network device login radius property support [chilan]
 
 version 24.0 (2019-05-16):
 
